--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         applicationId "com.example.tetrisapp"
         minSdk 24
         targetSdk 33
-        versionCode 7
+        versionCode 6
         versionName "2.0.0"
 
         vectorDrawables.useSupportLibrary = true
@@ -76,11 +76,20 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     // RxJava
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+
+    def lifecycle_version = "2.5.1"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    // Saved state module for ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    // Annotation processor
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     // Firebase and Google Services
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
@@ -99,4 +108,8 @@ dependencies {
 
     // Pusher for websockets
     implementation 'com.pusher:pusher-java-client:2.4.2'
+
+    // Work Manager
+    implementation "androidx.work:work-runtime:2.7.1"
+    implementation "androidx.concurrent:concurrent-futures:1.1.0"
 }
