--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,18 @@ android {
         applicationId "com.example.tetrisapp"
         minSdk 24
         targetSdk 33
-        versionCode 8
+        versionCode 9
         versionName "2.0.0"
 
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.release
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
