--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         applicationId "com.example.tetrisapp"
         minSdk 24
         targetSdk 33
-        versionCode 11
+        versionCode 12
         versionName "2.0.0"
 
         vectorDrawables.useSupportLibrary = true
@@ -73,11 +73,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // Room local database
-    def room_version = "2.4.3"
+    def room_version = "2.5.0"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-    testImplementation "androidx.room:room-testing:$room_version"
     implementation "androidx.room:room-rxjava3:$room_version"
+    implementation "androidx.room:room-paging:$room_version"
 
     def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
@@ -103,7 +103,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-crashlytics'
-    implementation 'com.google.android.gms:play-services-auth:20.4.0'
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
@@ -117,6 +117,6 @@ dependencies {
     implementation 'com.pusher:pusher-java-client:2.4.4'
 
     // Work Manager
-    implementation "androidx.work:work-runtime:2.7.1"
+    implementation "androidx.work:work-runtime:2.8.0"
     implementation "androidx.concurrent:concurrent-futures:1.1.0"
 }
